<resources>
    <string name="app_name">Greego</string>
    <string name="app_name_title">GREEGO</string>
    <string name="welcome_app_name">Welcome GreegoApp</string>
    <string name="header_title">Title</string>

    <string name="dont_we_drive">Don\'t Drive, We Drive</string>
    <string name="mobile_no_hint">Please enter your mobile number</string>
    <string name="whats_mobile_no">What\'s Your mobile number?</string>
    <string name="contact_wth_drv">This number will be used to contact with driver</string>
    <string name="enter_mobile_no_empty">Please enter mobile number.</string>
    <string name="entered_email_no_empty">Please enter email.</string>
    <string name="mobile_no_length">Please enter valid mobile number.</string>
    <string name="no_checked_agreement">Please first accept the term &amp; condition.</string>
    <string name="whats_digit_code">What\'s your 6 digit code?</string>
    <string name="enter_digit_code">Please enter OTP code.</string>
    <string name="resend">Resend</string>
    <string name="whats_email">What\'s your email address?</string>
    <string name="email_for_reach_user">It is the best way to reach you</string>

    <string name="mobile_number_hint"> (201) 555 - 5555</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="whats_name">What\'s your name?</string>
    <string name="desc_user_name">When they meet you,they will identify/verify you through your photo</string>

    <string name="hint_email">name@gmail.com</string>
    <string name="in_progress">In Progress</string>
    <string name="driver_with_geego">Drive With Greego</string>

    <string name="hint_fname">First name</string>
    <string name="hint_lname">Last name</string>
    <string name="whats_agreement">Do you agree with Greego?</string>
    <string name="desc_agreement">It is the term &amp; condition for users</string>
    <string name="agreement_detail">Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_setting_title">This is Your Payment Setting</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="promotion">Promotions</string>
    <string name="add_promo_code">Add Promo/Gift Code</string>
    <string name="title">title</string>

    <string name="update">Updates</string>
    <string name="profile">Profile</string>
    <string name="vehicle">Vehicle</string>
    <string name="payment">Payment</string>
    <string name="update_note">Before you use Greego, please complete the remain set up</string>
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <string name="enter_valid_digit_code">Please enter valid pin.</string>
    <string name="enter_digit_code_title">Enter the 6-digit code sent to</string>
    <string name="check_agreement">I agree the Greego agreement</string>
    <string name="text_edit_payment_title">Edit your payment?</string>
    <string name="exp_date">Exp.Date</string>
    <string name="cvv">CVV</string>
    <string name="zipcode">Zip Code</string>
    <string name="save">Save</string>
    <string name="enter_valid_card_no">Card number should be minimum 16 characters long.</string>
    <string name="card_not_valid">Card not valid.</string>
    <string name="enter_exp_date">Please select expire date.</string>
    <string name="enter_cvv_no">Please enter cvv number.</string>
    <string name="enter_valid_cvv_no">CVV number should be minimum 3 characters long.</string>
    <string name="enter_zipcode">Please enter zip code.</string>
    <string name="enter_valid_zipcode">Zip code should be minimum 5 characters long.</string>
    <string name="hint_promo_code">Please enter a promo/Gift code</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="card_number">Card Number</string>
    <string name="trip_history">Trip History</string>
    <string name="trip_date_time">Feb 19, 2018, 3:40 pm</string>
    <string name="trip_history_mi">1.41mi * 6min</string>
    <string name="trip_history_time">6min</string>
    <string name="trip_price">$32.20</string>
    <string name="driver_id">ABC123</string>
    <string name="thanks_msg_to_user">Thanks for requesting Greego driver</string>
    <string name="start">Start</string>
    <string name="start_time">3:43 PM</string>
    <string name="trip_start_location">3rd Avenue, New York, NY</string>
    <string name="end">End</string>
    <string name="end_time">3:48 PM</string>
    <string name="trip_end_location">2nd Avenue, New York, Ny</string>
    <string name="greego_fair">Greego fair</string>
    <string name="greego_fair_time">(1.41 mi, 6m 49s)</string>
    <string name="promotion_price">$0.00</string>
    <string name="total">Total</string>
    <string name="get_help">Get a help from Greego</string>
    <string name="promotion_code">1</string>
    <string name="free_tips">Free trips</string>
    <string name="free_driver_detail">Want more Greego for free driver?</string>
    <string name="get_free_driver">Get a free driver worth</string>
    <string name="invite_friends">when you refer a friend to try Greego</string>
    <string name="invite_code">Your invite code</string>
    <string name="code">na1004</string>
    <string name="done">Done</string>
    <string name="greego_help_title">greego.co/help</string>
    <string name="how_help">HOW CAN WE</string>
    <string name="help">HELP?</string>

    <string name="terms">TERMS &amp;</string>
    <string name="conditions">CONDITIONS</string>
    <string name="lost_found">Lost &amp; Found</string>
    <string name="help_report">Report an accident, safety Incident, or citation</string>

    <string name="title_activity_maps_home">Map</string>

    <string name="setting">Setting</string>
    <string name="username">Joy</string>
    <string name="joinDate">February 2017</string>
    <string name="join">Joined</string>
    <string name="unverify">Unverified</string>
    <string name="verify">Verified</string>
    <string name="phone">+1 123 123 1231</string>
    <string name="logout">Log out</string>
    <string name="who">Who are you?</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="btn_update">Update</string>
    <string name="vehicle_year">2017</string>
    <string name="vehicle_model">Lexus Rx</string>
    <string name="vehicle_make">350</string>
    <string name="vehicle_color">White</string>

    <string name="something_went_wrong">Something went wrong</string>

    <!--Mujju-->
    <string name="otp_resend_wng">Please enter correct otp.</string>
    <string name="otp_resend_empty">Please resend otp.</string>
    <string name="tv_vehical">What\'s your vehicle?</string>
    <string name="tv_vehical_ttl_dtl">Please select the option for your vehicle information.</string>

    <string name="vehicle_make_empty">Please choose vehicle make.</string>
    <string name="vehicle_model_empty">Please choose vehicle model.</string>
    <string name="vehicle_year_empty">Please choose vehicle year.</string>
    <string name="invalid_year">Please choose valid vehicle year.</string>
    <string name="vehicle_color_empty">Please choose vehicle color.</string>
    <string name="vehicle_car_empty">Please choose vehicle car type.</string>
    <string name="on_trip">On trip</string>
    <string name="your_driver">Your Driver is</string>

    <string-array name="typeOfModel">
        <item>Type of Car</item>
        <item>Sedan</item>
        <item>Suv</item>
        <item>Van</item>
    </string-array>
    <string name="tv_change">Change</string>
    <string name="tv_update_email">What\'s your email again?</string>
    <string name="tv_confirm_email">Please confirm you email using the link below.</string>
    <string name="tv_send_conf_email">Send Confirmation email</string>

    <!--Trip compeleted-->
    <string name="trip_with_dr_dtls">How was the trip with </string>
    <string name="rate_yr_dr_dtls">Rate your driver who makes your day special</string>
    <string name="submit">Submit</string>


    // pragnessh
    <string name="wheredogo">Where do you want to go?</string>
    <string name="picklocation">Pick-up location</string>
    <string name="new_payment">What\'s your new payment?</string>

    <string name="start1"><font fgcolor='#519021'>S</font>tart</string>
    <string name="end1"><font fgcolor='#569A94'>E</font>nd</string>

    //priyanka
    <string name="unable_request">Before requesting a driver,</string>
    <string name="update_info">You have to update your information</string>
    <string name="back_home">Back to home</string>
    <string name="no_profile">Please select your profile picture</string>

    <string name="help_questionMark">HELP?</string>
    <string name="greegoHelp">greego.co/help</string>
    <string name="report_safety">Report an accident, safety incident, or citation</string>
    <string name="bonus">Bonus</string>
    <string name="how_pay_cal">How and when driver pay is calculated</string>
    <string name="tv_policy">Service animal policy</string>
</resources>
