<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/scale_20dp"
        android:background="@drawable/bg_unable_request">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txt_3"
            android:text="@string/unable_request"
            android:textColor="@color/tv_unable"
            android:textSize="@dimen/txt_14"
            android:textStyle="bold"
            android:paddingLeft="@dimen/scale_10dp"
            android:paddingTop="@dimen/scale_20dp"
            android:layout_marginLeft="@dimen/scale_15dp"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/scale_20dp"
            android:text="@string/update_info"
            android:textColor="@color/tv_unable"
            android:layout_marginLeft="@dimen/scale_15dp"
            android:textSize="@dimen/txt_14"
            android:textStyle="bold"
            android:paddingLeft="@dimen/scale_10dp"
          app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
           />
        <Button
            android:id="@+id/btnBackHome"
            android:layout_width="@dimen/scale_160dp"
            android:layout_height="@dimen/scale_50dp"
            android:text="@string/back_home"
            android:textColor="@color/black"
            android:layout_margin="@dimen/scale_40dp"
            android:textAllCaps="false"
            android:background="@mipmap/bg_rectangle23"
            android:gravity="center"

            android:layout_marginTop="@dimen/scale_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            />

    </android.support.constraint.ConstraintLayout>
</layout>