<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mytextview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/free_trip_bg"
       tools:context=".Fragment.FreeTripsFragment">



        <android.support.constraint.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_40dp"
            android:background="@color/transparent"
            android:clickable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:visibility="invisible"
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scale_3dp"
                android:layout_marginRight="@dimen/scale_5dp"
                android:layout_marginTop="@dimen/scale_5dp"
                android:background="@android:color/transparent"
                android:padding="@dimen/scale_6dp"
                android:src="@mipmap/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scale_3dp"
                android:layout_marginRight="@dimen/scale_5dp"
                android:layout_marginTop="@dimen/scale_5dp"
                android:background="@android:color/transparent"
                android:padding="@dimen/scale_8dp"
                android:src="@mipmap/ic_edit"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/txt_3"
                android:layout_marginTop="@dimen/scale_5dp"
                android:text="@string/header_title"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_20"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/rlDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:ignore="UnknownId">

            <TextView
                android:id="@+id/tvFreeTrips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/scale_45dp"
                android:text="@string/free_tips"
                android:textColor="@color/app_bg"
                android:textSize="@dimen/txt_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFreeDriverTitle"
                android:layout_width="@dimen/scale_250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_50dp"
                android:paddingLeft="@dimen/scale_45dp"
                android:text="@string/free_driver_detail"
                android:textColor="@color/hint_color"
                android:layout_below="@+id/tvFreeTrips"
                android:textSize="@dimen/txt_18"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvFreeDriverWorth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_50dp"
                android:paddingLeft="@dimen/scale_45dp"
                android:text="@string/get_free_driver"
                android:textColor="@color/white"
                android:layout_below="@+id/tvFreeDriverTitle"
                android:textSize="@dimen/txt_18"
                 />
            <TextView
                android:id="@+id/tvWantInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/scale_45dp"
                android:text="@string/invite_friends"
                android:textColor="@color/white"
                android:layout_below="@+id/tvFreeDriverWorth"
                android:textSize="@dimen/txt_18"
                 />
            <TextView
                android:id="@+id/tvInviteCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/scale_45dp"
                android:text="@string/invite_code"
                android:textColor="@color/white"
                android:layout_below="@+id/tvWantInvite"
                android:textSize="@dimen/txt_18"
                android:layout_marginTop="@dimen/scale_150dp"
                android:textStyle="bold"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/scale_200dp"
            android:layout_height="@dimen/scale_45dp"
            android:layout_marginTop="@dimen/scale_15dp"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/scale_45dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlDetail"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/code"
                android:layout_marginLeft="@dimen/scale_15dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/scale_15dp"
                mytextview:srcCompat="?attr/actionModeShareDrawable" />

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</layout>