<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mytextview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Fragment.HelpFragment">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_40dp"
            android:background="@color/transparent"
            android:clickable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scale_3dp"
                android:layout_marginRight="@dimen/scale_5dp"
                android:layout_marginTop="@dimen/scale_5dp"
                android:background="@android:color/transparent"
                android:padding="@dimen/scale_6dp"
                android:text="@string/done"
                android:textColor="@color/done_help"
                android:textSize="@dimen/scale_15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scale_3dp"
                android:layout_marginRight="@dimen/scale_5dp"
                android:layout_marginTop="@dimen/scale_5dp"
                android:background="@android:color/transparent"
                android:padding="@dimen/scale_8dp"
                android:src="@android:drawable/ic_menu_rotate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/scale_6dp"
                android:text="@string/greego_help_title"
                android:textColor="@color/black"
                android:textSize="@dimen/scale_10dp"
                app:layout_constraintLeft_toRightOf="@+id/ibLock"
                />

            <ImageButton
                android:id="@+id/ibLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scale_3dp"
                android:layout_marginTop="@dimen/scale_5dp"
                android:background="@android:color/transparent"
                android:padding="@dimen/scale_5dp"
                android:src="@android:drawable/ic_lock_lock"
                android:layout_marginLeft="@dimen/scale_110dp"
                app:layout_constraintLeft_toRightOf="@+id/ibBack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintTop_toTopOf="parent"  />



        </android.support.constraint.ConstraintLayout>
        <RelativeLayout
            android:id="@+id/rlDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:ignore="UnknownId">

        <ImageView
                android:id="@+id/imgVwGreegoHelp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/scale_250dp"
                android:src="@drawable/slider_home_bg"
                />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/line"
                android:layout_below="@+id/imgVwGreegoHelp"
                />

            <TextView
                android:id="@+id/tvHow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_45dp"
                android:paddingLeft="@dimen/scale_8dp"
                android:text="@string/how_help"
                android:textColor="@color/line"
                android:textSize="@dimen/scale_30dp"
                android:textStyle="bold"
                android:layout_below="@+id/view"
                />

            <TextView
                android:id="@+id/tvHowHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textSize="@dimen/scale_30dp"
                android:layout_marginLeft="@dimen/scale_5dp"
                android:layout_marginTop="@dimen/scale_45dp"
                android:layout_below="@+id/view"
                android:layout_toRightOf="@+id/tvHow"
                />
            <TextView
                android:id="@+id/tvLostFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lost_found"
                android:textColor="@color/app_bg"
                android:textSize="@dimen/scale_15dp"
                android:gravity="center"
                android:layout_marginTop="@dimen/scale_60dp"
                android:layout_below="@+id/tvHow"
                />
            <TextView
                android:id="@+id/tvReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_report"
                android:layout_marginTop="@dimen/scale_8dp"
                android:textColor="@color/app_bg"
                android:textSize="@dimen/scale_15dp"
                android:gravity="center"
                android:layout_below="@+id/tvLostFound"
                />

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</layout>